build/log/idf_py_stderr_output_147331
/home/pi/httptc/main/httptc.c: In function 'app_main':
/home/pi/httptc/main/httptc.c:40:27: error: 'terget_temp' undeclared (first use in this function); did you mean 'target_temp'?
   40 |     load_config_from_nvs(&terget_temp,&output_delay_ms);
      |                           ^~~~~~~~~~~
      |                           target_temp
/home/pi/httptc/main/httptc.c:40:27: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/httptc.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6135: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:149: all] Error 2
